--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -34,16 +34,30 @@ jobs:
               pip-${{ runner.os }}-
 
       - name: Setup Node 22 with npm cache
+        if: ${{ hashFiles('**/package-lock.json','**/npm-shrinkwrap.json') != '' }}
         uses: actions/setup-node@v4
         with:
           node-version: '22'
           cache: 'npm'
 
+      - name: Setup Node 22 (no cache)
+        if: ${{ hashFiles('**/package-lock.json','**/npm-shrinkwrap.json') == '' }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+
       - name: Setup Yarn cache
+        if: ${{ hashFiles('**/yarn.lock') != '' }}
         uses: actions/setup-node@v4
         with:
           node-version: '22'
           cache: 'yarn'
+
+      - name: Setup Yarn (no cache)
+        if: ${{ hashFiles('**/yarn.lock') == '' }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
@@ -52,7 +66,7 @@ jobs:
           run_install: false
 
       - name: Cache pnpm store (Linux)
-        if: runner.os == 'Linux'
+        if: runner.os == 'Linux' && hashFiles('**/pnpm-lock.yaml') != ''
         uses: actions/cache@v4
         with:
           path: ~/.local/share/pnpm/store
@@ -61,7 +75,7 @@ jobs:
             pnpm-store-${{ runner.os }}-
 
       - name: Cache pnpm store (Windows)
-        if: runner.os == 'Windows'
+        if: runner.os == 'Windows' && hashFiles('**/pnpm-lock.yaml') != ''
         uses: actions/cache@v4
         with:
           path: C:\Users\runneradmin\AppData\Local\pnpm\store
