feat: Add environment setup scripts for Windows and Linux
- Introduced `setup-environment.ps1` for Windows to install essential tools including NVM, Node.js, Python, Google Cloud CLI, GitHub CLI, Terraform, Ansible, and .NET SDK.
- Added `setup-environment.sh` for Linux with similar functionality, ensuring compatibility with Dockerfile setups.
- Created `windows-converted-setup.ps1` to mirror the Linux setup script, ensuring consistent environment provisioning across platforms.
- Removed deprecated `windows-dockerfile-converted-setup.ps1` to streamline the setup process.
- Updated `tasks.json` to include tasks for provisioning environments on both Windows and Linux.

--- a/tasks.json
+++ b/tasks.json
@@ -90,6 +90,30 @@
       "problemMatcher": [],
       "presentation": { "reveal": "always" },
       "detail": "Lists unresolved thread IDs without resolving them."
+    },
+    {
+      "label": "Env: Provision (Windows)",
+      "type": "shell",
+      "command": "pwsh",
+      "args": [
+        "-NoProfile",
+        "-ExecutionPolicy","Bypass",
+  "-File","scripts/setup-environment.ps1"
+      ],
+      "problemMatcher": [],
+      "presentation": { "reveal": "always" },
+      "detail": "Provision local env on Windows via NVM-only script (exact Node pin)."
+    },
+    {
+      "label": "Env: Provision (Linux)",
+      "type": "shell",
+      "command": "bash",
+      "args": [
+  "scripts/setup-environment.sh"
+      ],
+      "problemMatcher": [],
+      "presentation": { "reveal": "always" },
+      "detail": "Provision local env on Linux using the consolidated script."
     }
   ]
 }
