fix: address PR #9 review comments\n\n- setup-environment.ps1: replace undefined Ensure-ChocoOrWinget with Get-PackageManager\n- setup-environment.sh: enforce exact Node pin (error when missing) and update comments\n- tasks.json: normalize args formatting and confirm commas\n- windows-converted-setup.ps1: deprecate and delegate to canonical scripts/setup-environment.ps1\n\nRefs: PR #9

--- a/tasks.json
+++ b/tasks.json
@@ -96,9 +96,11 @@
       "type": "shell",
       "command": "pwsh",
       "args": [
-        "-NoProfile",
-        "-ExecutionPolicy","Bypass",
-  "-File","scripts/setup-environment.ps1"
+  "-NoProfile",
+  "-ExecutionPolicy",
+  "Bypass",
+  "-File",
+  "scripts/setup-environment.ps1"
       ],
       "problemMatcher": [],
       "presentation": { "reveal": "always" },
