--- a/.github/workflows/validate-setup-scripts.yml
+++ b/.github/workflows/validate-setup-scripts.yml
@@ -9,6 +9,10 @@ on:
       - '**'
   workflow_dispatch:
 
+env:
+  # Mirror repo variable for linter-friendly usage in conditions
+  ENABLE_WINDOWS_SETUP_VALIDATION: ${{ vars.ENABLE_WINDOWS_SETUP_VALIDATION }}
+
 jobs:
   validate-linux:
     name: Validate Linux setup script
@@ -33,7 +37,7 @@ jobs:
           scripts/setup-environment.sh
 
   validate-windows:
-    if: ${{ vars.ENABLE_WINDOWS_SETUP_VALIDATION == 'true' }}
+    if: "${{ vars.ENABLE_WINDOWS_SETUP_VALIDATION == 'true' }}"
     name: Validate Windows setup script
     runs-on: windows-2022
     steps:
