--- a/tasks.json
+++ b/tasks.json
@@ -10,7 +10,8 @@
       "args": [
         ".github/copilot-instructions.md",
         "ai_instruction_modules/ai-task-based-workflow.md",
-        "ai_instruction_modules/ai-application-guidelines.md"
+        "ai_instruction_modules/ai-application-guidelines.md",
+        "ai-instructions-aspnet-guidelines.md"
       ],
       "problemMatcher": [],
       "presentation": {
