change all occurrences of `creatING-repository-summary` to `creatE-repository-summary`

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 logs/
 local_ai_instruction_modules
+
+# OpenMemory - IDE/Assistant specific rules
+.cursor\rules\openmemory.mdc
+CLAUDE.md
+.clinerules/byterover-rules.md
+.kilocode/rules/byterover-rules.md
+.roo/rules/byterover-rules.md
+.windsurf/rules/byterover-rules.md
+.cursor/rules/byterover-rules.mdc
+.kiro/steering/byterover-rules.md
+.qoder/rules/byterover-rules.md
+.augment/rules/byterover-rules.md
